--- a/david.kovacsvolgyi/Homework3/KovacsvolgyiWebshop/KovacsvolgyiWebshop-web/pom.xml
+++ b/david.kovacsvolgyi/Homework3/KovacsvolgyiWebshop/KovacsvolgyiWebshop-web/pom.xml
@@ -25,6 +25,7 @@
          <groupId>hu.codingmentor</groupId>
          <artifactId>KovacsvolgyiWebshop-ejb</artifactId>
          <version>1.0.0</version>
+         <scope>provided</scope>
         
         </dependency>
         <dependency>
@@ -42,8 +43,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
                     </compilerArguments>
