--- a/david.kovacsvolgyi/Homework3/KovacsvolgyiWebshop/pom.xml
+++ b/david.kovacsvolgyi/Homework3/KovacsvolgyiWebshop/pom.xml
@@ -11,4 +11,10 @@
     <module>KovacsvolgyiWebshop-web</module>
     <module>KovacsvolgyiWebshop-ejb</module>
   </modules>
+  <properties>
+  <sonar.login>david.kovacsvolgyi</sonar.login>
+        <sonar.password>metal123</sonar.password>
+        <sonar.host.url>http://sonar.codingmentor.xyz</sonar.host.url>
+        <sonar.language>java</sonar.language>
+  </properties>
 </project>
