--- a/david.kovacsvolgyi/Homework5/KovacsvolgyiEntity/pom.xml
+++ b/david.kovacsvolgyi/Homework5/KovacsvolgyiEntity/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>hu.codingmentor</groupId>
-    <artifactId>entityPractice</artifactId>
+    <artifactId>KovacsvolgyiEntity</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
     <dependencies>
@@ -29,4 +29,5 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    <name>KovacsvolgyiEntity</name>
 </project>
