debugging with denes

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /david.kovacsvolgyi/Homework3/KovacsvolgyiWebshop/target/
 /david.kovacsvolgyi/Homework3/entityPractice/target/
 /david.kovacsvolgyi/Homework5/entityPractice/target/
+/david.kovacsvolgyi/Homework5/KovacsvolgyiEntity/target/
