--- a/david.kovacsvolgyi/Homework4/KovacscvolgyiAsynchronousCalls/KovacscvolgyiAsynchronousCalls-web/pom.xml
+++ b/david.kovacsvolgyi/Homework4/KovacscvolgyiAsynchronousCalls/KovacscvolgyiAsynchronousCalls-web/pom.xml
@@ -21,6 +21,12 @@
     
     <dependencies>
         <dependency>
+    <groupId>hu.codingmentor</groupId>
+    <artifactId>KovacscvolgyiAsynchronousCalls-ejb</artifactId>
+    <version>1.0.0</version>
+    <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
