--- a/david.kovacsvolgyi/Homework5/KovacsvolgyiEntity/pom.xml
+++ b/david.kovacsvolgyi/Homework5/KovacsvolgyiEntity/pom.xml
@@ -28,6 +28,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <sonar.login>david.kovacsvolgyi</sonar.login>
+        <sonar.password>metal123</sonar.password>
+        <sonar.host.url>http://sonar.codingmentor.xyz</sonar.host.url>
+        <sonar.language>java</sonar.language>
     </properties>
     <name>KovacsvolgyiEntity</name>
 </project>
