--- a/david.kovacsvolgyi/Homework4/KovacscvolgyiAsynchronousCalls/pom.xml
+++ b/david.kovacsvolgyi/Homework4/KovacscvolgyiAsynchronousCalls/pom.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>hu.codingmentor</groupId>
-  <artifactId>KovacscvolgyiAsynchronousCalls</artifactId>
-  <version>1.0.0</version>
-  <packaging>pom</packaging>
-  <name>KovacscvolgyiAsynchronousCalls</name>
-  <modules>
-    <module>KovacscvolgyiAsynchronousCalls-ear</module>
-    <module>KovacscvolgyiAsynchronousCalls-web</module>
-    <module>KovacscvolgyiAsynchronousCalls-ejb</module>
-  </modules>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>hu.codingmentor</groupId>
+    <artifactId>KovacscvolgyiAsynchronousCalls</artifactId>
+    <version>1.0.0</version>
+    <packaging>pom</packaging>
+    <name>KovacscvolgyiAsynchronousCalls</name>
+    <modules>
+        <module>KovacscvolgyiAsynchronousCalls-ear</module>
+        <module>KovacscvolgyiAsynchronousCalls-web</module>
+        <module>KovacscvolgyiAsynchronousCalls-ejb</module>
+    </modules>
+    <properties>
+        <sonar.login>david.kovacsvolgyi</sonar.login>
+        <sonar.password>metal123</sonar.password>
+        <sonar.host.url>http://sonar.codingmentor.xyz</sonar.host.url>
+        <sonar.language>java</sonar.language>
+    </properties>
 </project>
