--- a/david.kovacsvolgyi/Homework7/KovacsvolgyiJobFactory/KovacsvolgyiJobFactory-web/pom.xml
+++ b/david.kovacsvolgyi/Homework7/KovacsvolgyiJobFactory/KovacsvolgyiJobFactory-web/pom.xml
@@ -24,6 +24,7 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>KovacsvolgyiJobFactory-ejb</artifactId>
             <version>${project.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
