--- a/david.kovacsvolgyi/Homework6/KovacsvolgyiThemePark/KovacsvolgyiThemePark-web/pom.xml
+++ b/david.kovacsvolgyi/Homework6/KovacsvolgyiThemePark/KovacsvolgyiThemePark-web/pom.xml
@@ -2,10 +2,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-    <artifactId>KovacsvolgyiThemePark</artifactId>
-    <groupId>hu.codingmentor</groupId>
-    <version>1.0.0</version>
-  </parent>
+        <artifactId>KovacsvolgyiThemePark</artifactId>
+        <groupId>hu.codingmentor</groupId>
+        <version>1.0.0</version>
+    </parent>
 
     <groupId>hu.codingmentor</groupId>
     <artifactId>KovacsvolgyiThemePark-web</artifactId>
@@ -20,6 +20,12 @@
     </properties>
     
     <dependencies>
+        <dependency>
+            <groupId>hu.codingmentor</groupId>
+            <artifactId>KovacsvolgyiThemePark-ejb</artifactId>
+            <version>1.0.0</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
